force-app/main/default/objects/OrderGood__c/OrderGood__c.object-meta.xml
<CustomObject>
    <label>OrderGood</label>
    <nameField>
        <label>OrderGood Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderGoods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>