force-app/main/default/objects/OrderGood__c/fields/Bypass_validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass validation</label>
    <type>Checkbox</type>
</CustomField>