force-app/main/default/objects/OrderGood__c/fields/Discount_price__c.field-meta.xml
<CustomField>
    <fullName>Discount_price__c</fullName>
    <formula>Order_price__c *  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>