force-app/main/default/objects/OrderGood__c/fields/Goods_count__c.field-meta.xml
<CustomField>
    <fullName>Goods_count__c</fullName>
    <label>Goods count</label>
    <summaryForeignKey>Good1__c.OrderGood__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>