force-app/main/default/objects/OrderGood__c/fields/Name_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Name_Supplier__c</fullName>
    <label>Name Supplier</label>
    <type>TextArea</type>
</CustomField>