force-app/main/default/objects/OrderGood__c/fields/Order_price__c.field-meta.xml
<CustomField>
    <fullName>Order_price__c</fullName>
    <label>Order price</label>
    <summarizedField>Good1__c.Price__c</summarizedField>
    <summaryForeignKey>Good1__c.OrderGood__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>