force-app/main/default/objects/OrderGood__c/validationRules/Discount_max.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_max</fullName>
    <active>true</active>
    <errorConditionFormula>Discount__c  &gt; 0.50</errorConditionFormula>
    <errorMessage>You can&apos;t do this !!!! Max discoun is 50%</errorMessage>
</ValidationRule>